------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Mon Nov 15 08:38 GMT 1999   Simon Weijgers  <simon@weijgers.com>

	* Patch from David Murn <scuffer@hups.apana.org.au>:
	  Allows you to pass parameters to IRQ handlers.

Wed Nov 10 16:04 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Merge in code to boot kernel from rom, contributed by
	  Christian Mardmuller (chm@kdt.de).

Wed Nov 10 14:51 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Replaced bulky timer mechanism with a simple one.

Fri Nov 05 17:21 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed inode finding bug which caused mount problems.

Mon Nov 01 18:02 GMT 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Final changes for 0.0.80.

Fri Oct 29 19:14 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Filled out kill(2) functionality to full System V spec.

Tue Oct 26 14:24 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Increment version to 0.0.80-pre1

	* Removed unused "old timer" code from sched.c

	* Removed unused bottom half code from sched.c

	* Fixed errno return codes to negative values in kernel/time.c
	  as pointed out by James M. Lowery about 16 months ago. Sorry.

	* Added CONFIG option to allow atime and ctime to be removed
	  from kernel, and enable by default as it is unimplemented in
	  minixfs.

	* Removed bloated notify_change() code, and instead implement 
	  inode changes directly in the required functions.

	* Fix to irqtab.c which should solve problems with floppy not
	  spinning down.

Mon Oct 11 14:00 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Latest version of the rd driver by Blaz Antonic

	* Added CONFIG options for embedded systems including option